Including current module name as suggested.